--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body bgcolor="ghostwhite">
     <center>
         <p>
+        <h1>Hi, This is Aravind!</h1>
+        </p>
+        <p>
             <img src="pic1.jpg" id="image" />
         </p>
         <p>
