--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content=" width=device-width, initial-scale=1">
     <title> Welcome | Shuffling Images</title>
+    <link href="https://cdn.jsdelivr .net/npm/bootstrap@5.0.0-beta3 /dist/css/bootstrap.min.css" rel=" stylesheet" integrity="sha384-e0JMYsd53ii+sc0/bJGFsiCZc+5NDVN Zyr8+ORDqr0Q10h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 
 <body bgcolor="ghostwhite">
